--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
           command: |
             aws cloudformation deploy \
               --template-file .circleci/files/template.yml \
-              --stack-name lou2stack
+              --stack-name loustack1
 workflows:
   my_workflow:
     jobs:
