--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,10 +21,10 @@ jobs:
               --template-file template.yml \
               --stack-name prod-${CIRCLE_WORKFLOW_ID}
       - run: return 1
-      - destroy_environment
+      - Destroy environment
         when: on_fail
 
 workflows:
   my_workflow:
     jobs:
-      - build
+      create_infrastructure
