--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,8 +21,9 @@ jobs:
               --template-file template.yml \
               --stack-name prod-${CIRCLE_WORKFLOW_ID}
       - run: return 1
-      - Destroy environment
+      - destroy environment
         when: on_fail
+
 
 workflows:
   my_workflow:
