--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,9 +23,8 @@ jobs:
               --template-file template.yml \
               --stack-name prod-${CIRCLE_WORKFLOW_ID}
       - run: return 1
-      when: on_fail
       - Destroy environment
-        
+        when on_fail
         
 workflows:
   my_workflow:
