--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2.1
 
 commands:
-  Destroy_environment:
+  Destroy environment:
     steps:
       - run:
           name: Destroy environment
@@ -24,7 +24,7 @@ jobs:
               --template-file template.yml \
               --stack-name prod-${CIRCLE_WORKFLOW_ID}
       - run: return 1
-      - Destroy_environment
+      - Destroy environment
         
         
 workflows:
