--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,10 +1,10 @@
 version: 2.1
 
 commands:
-  Destroy environment:
+  DestroyEnvironment:
     steps:
       - run:
-          name: Destroy environment
+          name: DestroyEnvironment
           when: on_fail
           command: |
             aws cloudformation delete-stack --stack-name prod-${CIRCLE_WORKFLOW_ID}
@@ -24,7 +24,7 @@ jobs:
               --template-file template.yml \
               --stack-name prod-${CIRCLE_WORKFLOW_ID}
       - run: return 1
-      - Destroy environment
+      - DestroyEnvironment
         
         
 workflows:
