--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,10 +1,10 @@
 version: 2.1
 
 commands:
-  DestroyEnvironment:
+  destroyenvironment:
     steps:
       - run:
-          name: DestroyEnvironment
+          name: destroyenvironment
           when: on_fail
           command: |
             aws cloudformation delete-stack --stack-name prod-${CIRCLE_WORKFLOW_ID}
@@ -24,7 +24,7 @@ jobs:
               --template-file template.yml \
               --stack-name prod-${CIRCLE_WORKFLOW_ID}
       - run: return 1
-      - DestroyEnvironment
+      - destroyenvironment
         
         
 workflows:
