--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ jobs:
           name: Create Stack
           command: |
             aws cloudformation deploy \
-              --template-file template.yml \
+              --template-file .circleci/template.yml \
               --stack-name prod-${CIRCLE_WORKFLOW_ID}
       - run: return 1
       - destroyenvironment
