--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ commands:
           when: on_fail
           command: |
             aws cloudformation delete-stack --stack-name prod-${CIRCLE_WORKFLOW_ID}
-            
+
                       
 
 
@@ -24,7 +24,7 @@ jobs:
             aws cloudformation deploy \
               --template-file .circleci/template.yml \
               --stack-name prod-${CIRCLE_WORKFLOW_ID}
-      - run: return 1
+      - run: exit 1
       - destroyenvironment
                 
         
