--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,6 @@ commands:
           when: on_fail
           command: |
             aws cloudformation delete-stack --stack-name prod-${CIRCLE_WORKFLOW_ID}
-
                       
 
 
@@ -24,9 +23,10 @@ jobs:
             aws cloudformation deploy \
               --template-file .circleci/template.yml \
               --stack-name prod-${CIRCLE_WORKFLOW_ID}
-      - run: exit 1
+      - run: return 1
       - destroyenvironment
-                
+        
+        
         
 workflows:
   my_workflow:  
