--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,34 +1,32 @@
 version: 2.1
-
-commands:
-  destroyenvironment:
-    steps:
-      - run:
-          name: destroyenvironment
-          when: on_fail
-          command: |
-            aws cloudformation delete-stack --stack-name prod-${CIRCLE_WORKFLOW_ID}
-                      
-
-
 jobs:
-  create_infrastructure:
+  create_and_deploy_front_end:
     docker:
       - image: amazon/aws-cli
     steps:
       - checkout
-      - run:
-          name: Create Stack
-          command: |
-            aws cloudformation deploy \
-              --template-file .circleci/template.yml \
-              --stack-name prod-${CIRCLE_WORKFLOW_ID}
-      
-      - destroyenvironment
-        
-        
-        
-workflows:
-  my_workflow:  
-    jobs:
-      - create_infrastructure
+      - run: |
+          aws cloudformation deploy \
+            --template-file bucket.yml \
+            --stack-name "${CIRCLE_WORKFLOW_ID}" \
+            --parameter-overrides NAME="${CIRCLE_WORKFLOW_ID}"
+      - run: aws s3 sync . s3://"${CIRCLE_WORKFLOW_ID}" --delete
+
+  promote_to_production:
+    docker:
+      - image: amazon/aws-cli
+    steps:
+      - checkout
+      - run: |
+          aws cloudformation deploy \
+            --template-file cloudformation.yml \
+            --stack-name cloudfront \
+            --parameter-overrides PipelineID="${CIRCLE_WORKFLOW_ID}"
+
+
+  workflows:
+    default:
+      jobs:
+        - create_and_deploy_front_end
+        - promote_to_production
+            requires: [create_and_deploy_front_end]
