--- a/bucket.yml
+++ b/bucket.yml
@@ -20,4 +20,4 @@ WebsiteBucketPolicy:
         Effect: Allow
         Principal: '*'
         Action: s3:GetObject
-        Resource: !Join ['', ['arn:aws:s3:::', !Ref 'WebsiteBucket', /*]]
+        Resource: !Join ['', ['arn:aws:s3:::loucicd1', !Ref 'WebsiteBucket', /*]]
